--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/dimension"]
+[submodule "unicorn/themes/dimension"]
 	path = unicorn/themes/dimension
 	url = https://github.com/your-identity/hugo-theme-dimension.git
